# Heartfelt-AI

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json
projects/heartfelt-ai/: .env.example  .gitignore  PLAN.md  PROGRESS.md  README.md  docker-compose.yml  test-format.ts  test-gezida-ppl.ts  test-ppl-optimization.ts
projects/heartfelt-ai/ai-service/: README.md  pyproject.toml
projects/heartfelt-ai/ai-service/app/: config.py  main.py
projects/heartfelt-ai/ai-service/app/data/: __init__.py  ai_fingerprint_dict.py  humanize_rules.py  synonym_dict.py
projects/heartfelt-ai/ai-service/app/routers/: analyze.py  health.py  perplexity.py
projects/heartfelt-ai/ai-service/app/schemas/: analyze.py
projects/heartfelt-ai/ai-service/app/services/: perplexity_service.py  rule_engine.py  text_analyzer.py  vocab_replacer.py
projects/heartfelt-ai/ai-service/tests/: __init__.py  parity-node-output.json  parity-rule-engine-output.json  parity_rule_engine.py  parity_test.py  test_rule_engine.py  test_text_analyzer.py  test_vocab_replacer.py
projects/heartfelt-ai/ai-service/tests/fixtures/: __init__.py  samples.py
projects/heartfelt-ai/backend/: package.json
projects/heartfelt-ai/backend/scripts/: make-test-docx.ts
projects/heartfelt-ai/backend/src/: app.module.ts  data-source.ts  main.ts
projects/heartfelt-ai/backend/src/ai-service/: ai-service.client.ts  ai-service.module.ts
projects/heartfelt-ai/backend/src/config/: llm.config.ts
projects/heartfelt-ai/backend/src/entities/: ai-detection-result.entity.ts  corpus-fingerprint.entity.ts  humanize-iteration.entity.ts  index.ts  paper.entity.ts  plagiarism-result.entity.ts
projects/heartfelt-ai/backend/src/health/: health.controller.ts  health.module.ts
projects/heartfelt-ai/backend/src/humanize/: humanize.controller.ts  humanize.module.ts  humanize.service.ts
projects/heartfelt-ai/backend/src/migrations/: 1730000000000-init0001-create-schema.ts
projects/heartfelt-ai/backend/src/papers/: papers.controller.ts  papers.module.ts  papers.service.ts
projects/heartfelt-ai/frontend/: index.html  package.json  screenshot.mjs  vite.config.ts
projects/heartfelt-ai/scripts/: phase0-verify.sh
projects/heartfelt-ai/shared/: README.md  openapi.yaml
projects/heartfelt-ai/shared/types/: index.ts
src/mastra/: index.ts
src/mastra/agents/: weather-agent.ts
src/mastra/scorers/: weather-scorer.ts
src/mastra/workflows/: weather-workflow.ts
(+41 files in other folders)
