[project]
name = "heartfelt-ai-service"
version = "0.1.0"
description = "Heartfelt AI - Python FastAPI service for model inference (embedding, perplexity, AI detection)"
requires-python = ">=3.10"
readme = "README.md"

# 骨架期只装最小依赖。
# torch / transformers / sentence-transformers 等大依赖（500MB+）
# 在实现 /embed /perplexity /detect-ai 时再按需加。
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "jieba>=0.42.1",
]

[project.optional-dependencies]
# 后续按模块按需安装：
embed = [
    "torch>=2.4.0",
    "transformers>=4.46.0",
    "sentence-transformers>=3.2.0",
    "flagembedding>=1.3.0",
]
detect = [
    "torch>=2.4.0",
    "transformers>=4.46.0",
]
vector-store = [
    "pgvector>=0.3.0",
    "psycopg[binary]>=3.2.0",
]

[tool.uv]
# 国内用户首次下载 HuggingFace 模型可用镜像
# 实际环境变量在 .env 里设 HF_ENDPOINT=https://hf-mirror.com

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
# 控制台输出格式
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP"]
ignore = ["E501"]  # 行长由 line-length 控制,不强制报错
